@@ -1,3 +1,8 @@
+2014-10-28  Patrice Dumas  <pertusus@free.fr>
+
+	* Texinfo/Convert/DocBook.pm: also upper-case accented commands
+	when in the 'upper_case' context.
+
 2014-10-27  Patrice Dumas  <pertusus@free.fr>
 
 	* Texinfo/Convert/DocBook.pm (upper_case_style_commands): use
